--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
     <link id='favicon' rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-png">
-    <title>Portfolio | Raka quizhal</title>
+    <title>Portfolio | Raka Quizhal</title>
 </head>
 <body oncontextmenu="return false">
 
@@ -63,7 +63,7 @@
       </div>
     </div>
 <div class="image">
-    <img draggable="false" class="tilt" src="./assets/images/hero.png" alt="">
+    <img draggable="false" class="tilt" src="./assets/images/raka.jpeg" alt="">
 </div>
 </section>
 <!-- hero section ends -->
@@ -114,12 +114,7 @@
     <div class="container">
           <div class="row" id="skillsContainer">
 
-             <div class="bar">
-              <div class="info">
-                <img src="https://img.icons8.com/?size=100&id=tuPYhRnbrAS2&format=png&color=000000"/>
-                <span>AdobeXD</span>
-              </div>
-            </div> 
+            
 
             <div class="bar">
               <div class="info">
